- Added a Edit Text window to the GUI.
- Removed the Custom Login and Logout windows (Now editable from the Players tab).
- Added Plugin API.
- Now Supports WOM texturing.
- Added /waypoint.
- Added /topten.
- Added /faq.
- Added /maze.
- Added /draw. 
- Reverted to old CLI Interface due to an issue where the server would lock up when the console used an invalid command. 
- Remade the Economy system. Now consolidated into 1 command '/economy' and 1 properties file

v4.9.0.0
- Fixed a bug in /pyramid
- Fixed Restart-on-error
- Fixed an issue where sometimes saving levels would randomly crash the server
- Added a feature that checks if the Meeby.SmartIrc4Net.dll file exists. If it does not, the server will download it.
- Modified the CLI Interface. It is now smoother and now you must put a "/" infront of commands in the CLI. 
- Adminchat Symbol is now "+". 
- /freeze now works in the console. 

v4.8.0.0
- Added custom login and logout messages - customizable in the console properties
- Added /loginmessage [Player] [Message] and /logoutmessage [Player] [Message]
- Added /explode - For all your exploding needs:
	-/explode me - Explodes yourself
	-/explode [Player] - Explodes the specified player
	-/explode [X] [Y] [Z] - Explodes at the specified co-ordinates
- Added /pyramid - Builds pyramids, thanks to aaron1tasker:
	-/pyramid - Builds a solid pyramid
	-/pyramid hollow - Builds a hollow pyramid
	-/pyramid reverse - Builds a reverse pyramid
- Added add-on /hide check - Checks if your hiding
- Added /tnt allow and /tnt disallow to disable and enable the use of tnt commands
- Fixed /restart and the console restart button
- Fixed /overseer - Now accepts players names with upper-case letters, with the creation of maps
- Fixed /unbanip - It will now unban ips with no more, "Not a valid ip!" messages :)
- Fixed: Changelog now displays in the console.
- Updated: /reload - Better version that takes you to the map immediately, sends reload message and logs.