@@ -272,7 +272,8 @@ namespace MCForge
 
         //Waypoints
         public List<Waypoint.WP> Waypoints = new List<Waypoint.WP>();
-
+        public int ponycount = 0;
+        public int rdcount = 0;
         public bool loggedIn = false;
 
         private Player()
@@ -1916,33 +1917,33 @@ namespace MCForge
                         return;
                     }
                 }
-                int ponycount = 0;
-                int rdcount = 0;
+             
                 if (cmd.ToLower() == "care") { SendMessage("Dmitchell94 now loves you with all his heart."); return; }
                 if (cmd.ToLower() == "facepalm") { SendMessage("Fenderrock87's bot army just simultaneously facepalm'd at your use of this command."); return; }
                 if (cmd.ToLower() == "alpaca") { SendMessage("Leitrean's Alpaca Army just raped your woman and pillaged your villages!"); return; }
                 if (cmd.ToLower() == "pony")
                 {
-                    if (ponycount < 5)
+                    if (ponycount < 2)
                     {
-                        GlobalMessage(this.color + this.name + Server.DefaultColor + " just so happens to be a proud brony! Everyone give " + this.color + this.name + Server.DefaultColor + " a brohoof!"); 
+                        GlobalMessage(this.color + this.name + Server.DefaultColor + " just so happens to be a proud brony! Everyone give " + this.color + this.name + Server.DefaultColor + " a brohoof!");
+                        ponycount++;
                     }
                     else
                     {
-                        SendMessage("You have used this command 5 times. You cannot use it anymore! Sorry, Brony!");
+                        SendMessage("You have used this command 2 times. You cannot use it anymore! Sorry, Brony!");
                     }
                     return;
                 }
                 if (cmd.ToLower() == "rainbowdashiscoolerthanyou") 
                 {
-                    if (rdcount < 5)
+                    if (rdcount < 2)
                     {
                         GlobalMessage("&1T&2H&3I&4S &5S&6E&7R&8V&9E&aR &bJ&cU&dS&eT &fG&0O&1T &22&30 &4P&CE&7R&DC&EE&9N&1T &5C&6O&7O&8L&9E&aR&b!");
                         rdcount++;
                     }
                     else
                     {
-                        SendMessage("You have used this command 5 times. You cannot use it anymore! Sorry, Brony!");
+                        SendMessage("You have used this command 2 times. You cannot use it anymore! Sorry, Brony!");
                     }
                     return;
                 }
